feat(argo-cd) Add appHardResyncPeriod option for controller
Base on this PR upstream https://github.com/argoproj/argo-cd/pull/8928 we can
now provide a hard resync value to the ArgoCD Application Controller

Signed-off-by: JM <jmeridth@gmail.com>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -44,6 +44,8 @@ spec:
         - {{ .Values.controller.args.operationProcessors | quote }}
         - --app-resync
         - {{ .Values.controller.args.appResyncPeriod | quote }}
+        - --app-hard-resync
+        - {{ .Values.controller.args.appHardResyncPeriod | quote }}
         - --self-heal-timeout-seconds
         - {{ .Values.controller.args.selfHealTimeout | quote }}
         - --repo-server
