--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -128,6 +128,8 @@ controller:
     statusProcessors: "20"
     # -- define the application controller `--operation-processors`
     operationProcessors: "10"
+    # -- define the application controller `--app-hard-resync`
+    appHardResyncPeriod: "0"
     # -- define the application controller `--app-resync`
     appResyncPeriod: "180"
     # -- define the application controller `--self-heal-timeout-seconds`
