fix(argo-workflows): Changed default .Values.artifactRepository.s3.insecure to false for security Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -502,7 +502,8 @@ artifactRepository:
     secretKeySecret:
       # name: <releaseName>-minio
       key: secretkey
-    insecure: true
+    # insecure will disable TLS. Primarily used for minio installs not configured with TLS
+    insecure: false
     # bucket:
     # endpoint:
     # region:
