chore(github): use makefile instead of scripts
Signed-off-by: Oliver Bähler <oliverbaehler@hotmail.com>

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run docs-testing (helm-docs)
         id: helm-docs
         run: |
-          ./scripts/helm-docs.sh
+          make helm-docs
           if [[ $(git diff --stat) != '' ]]; then
             echo -e '\033[0;31mDocumentation outdated!\033[0m ❌'
             git diff --color
