--- a/charts/argo-rollouts/templates/controller/role.yaml
+++ b/charts/argo-rollouts/templates/controller/role.yaml
@@ -66,7 +66,7 @@ rules:
   - list
   - watch
   - patch
-# secret read access to run analysis templates which reference secrets
+# secret access to run analysis templates which reference secrets
 # configmap access to read notification-engine configuration
 - apiGroups:
   - ""
@@ -77,6 +77,9 @@ rules:
   - get
   - list
   - watch
+  - create
+  - patch
+  - update
 # pod list/update needed for updating ephemeral data
 - apiGroups:
   - ""
