chore(github): add argocd-apps on pr-title Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -24,6 +24,7 @@ jobs:
             argo-rollouts
             argo-workflows
             argocd-image-updater
+            argocd-apps
             github
           # Configure that a scope must always be provided.
           requireScope: true
