feat(argocd-apps): adopt additional Applications/Projects to argocd-apps chart (#1356)
Signed-off-by: yu-croco <yuki.kita22@gmail.com>

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -24,6 +24,7 @@ body:
       - argo-rollouts
       - argo-workflows
       - argocd-image-updater
+      - argocd-apps
       - other
   validations:
     required: true
