--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -22,6 +22,7 @@ body:
       - argo-rollouts
       - argo-workflows
       - argocd-image-updater
+      - argocd-apps
       - other
   validations:
     required: true
