--- a/charts/argo-rollouts/templates/aggregate-roles.yaml
+++ b/charts/argo-rollouts/templates/aggregate-roles.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.clusterInstall }}
+{{- if and .Values.clusterInstall .Values.createClusterAggregateRoles }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
