--- a/charts/argo-rollouts/templates/controller/clusterrolebinding.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.clusterInstall }}
+{{- if and .Values.clusterInstall .Values.controller.createClusterRole }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
