Move notification configs to config dir
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
@@ -14,6 +14,6 @@ metadata:
 type: Opaque
 stringData:
   {{- with .Values.notifications.secret.items }}
-  {{ toYaml . | nindent 2 }}
+    {{- toYaml . | nindent 2 }}
   {{- end }}
 {{- end }}
