feat: Implement "crds.keep" like argo-events chart
Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -13,6 +13,10 @@ kubeVersionOverride: ""
 crds:
   # -- Install and upgrade CRDs
   install: true
+  # -- Keep CRDs on chart uninstall
+  keep: true
+  # -- Annotations to be added to all CRDs
+  annotations: {}
 
 global:
   image:
