feat(argo-cd): manage CRD by Helm (#1342)
* feat(argo-cd): manage CRD by Helm
Signed-off-by: yu-croco <yuki.kita22@gmail.com>

* feat: Implement "crds.keep" like argo-events chart

Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

* fix(argo-cd): update path of ArgoCD CRDs
Signed-off-by: yu-croco <yu.croco@gmail.com>

* fix: Don't keep CRDs during chart testing

Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>
Co-authored-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -9,6 +9,15 @@ fullnameOverride: ""
 # -- Override the Kubernetes version, which is used to evaluate certain manifests
 kubeVersionOverride: ""
 
+## Custom resource configuration
+crds:
+  # -- Install and upgrade CRDs
+  install: true
+  # -- Keep CRDs on chart uninstall
+  keep: true
+  # -- Annotations to be added to all CRDs
+  annotations: {}
+
 global:
   image:
     # -- If defined, a repository applied to all Argo CD deployments
