--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -21,4 +21,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Fix]: Invalid yaml for controller topologySpreadConstraints"
+    - "[Fixed]: Invalid yaml for controller topologySpreadConstraints"
