chore(maintainers) Change helm chart maintainers to argoproj
Standardize helm chart maintainer to be

```yaml
maintainers:
  - name: argoproj
    url: https://argoproj.github.io/
```

We'll use CODEOWNERS to notify individual maintainers about PRs to the helm charts and will be our source-of-truth for that information

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.7.1
 description: A Helm chart for Argo Events, the event-driven workflow automation framework
 name: argo-events
-version: 2.0.3
+version: 2.0.4
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-events/assets/logo.png
 keywords:
@@ -11,9 +11,8 @@ keywords:
 sources:
   - https://github.com/argoproj/argo-events
 maintainers:
-  - name: pdrastil
-  - name: VaibhavPage
-  - name: whynowy
+  - name: argoproj
+    url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: Fixed selectorLabel of ServiceMonitor that doesn't match metrics Service"
+    - "[Changed]: Helm chart maintainers standardized to argoproj"
