--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v2.4.11
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.3.3
+version: 5.3.4
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 keywords:
@@ -10,10 +10,8 @@ keywords:
   - argocd
   - gitops
 maintainers:
-  - name: alexec
-  - name: alexmt
-  - name: jessesuen
-  - name: seanson
+  - name: argoproj
+    url: https://argoproj.github.io/
 dependencies:
   - name: redis-ha
     version: 4.20.0
@@ -21,4 +19,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: Removal of duplicate mapping key annotations in crds"
+    - "[Changed]: Helm chart maintainers standardized to argoproj"
