--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -1,14 +1,13 @@
 apiVersion: v2
-appVersion: "v1.2.0"
+appVersion: "v1.2.2"
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.19.0
+version: 2.19.2
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 maintainers:
-  - name: alexmt
-  - name: dthomson25
-  - name: jessesuen
+  - name: argoproj
+    url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: flags to disable the creation of ClusterRoles/ClusterRoleBindings when run in cluster mode "
+    - "[Changed]: Helm chart maintainers standardized to argoproj"
