--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,18 +1,16 @@
 apiVersion: v2
+appVersion: v3.3.9
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.17.0
-appVersion: v3.3.9
+version: 0.17.1
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
   - https://github.com/argoproj/argo-workflows
 maintainers:
-  - name: alexec
-  - name: alexmt
-  - name: jessesuen
-  - name: benjaminws
+  - name: argoproj
+    url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: Changed default .Values.artifactRepository.s3.insecure to false for security"
+    - "[Changed]: Helm chart maintainers standardized to argoproj"
