fix(argo-cd): Avoid invalid labels when image tags have digest
This was missing from https://github.com/argoproj/argo-helm/pull/1368
to fix https://github.com/argoproj/argo-helm/issues/417.

Fix the following validation error:

Error: failed to create resource: Deployment.apps
"argocd-applicationset-controller" is invalid: [metadata.labels: Invalid
value:
"v2.4.4@sha256:9d78128c71e88daf7c6bb45c7c2d58ac293786fea6ae1c572": a
valid label must be an empty string or consist of alphanumeric
characters, ''-'', ''_'' or ''.'', and must start and end with an
alphanumeric character (e.g. ''MyValue'',  or ''my_value'',  or
''12345'', regex used for validation is
''(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])?''), spec.template.labels:
Invalid value:
"v2.4.4@sha256:9d78128c71e88daf7c6bb45c7c2d58ac293786fea6ae1c572": a
valid label must be an empty string or consist of alphanumeric
characters, ''-'', ''_'' or ''.'', and must start and end with an
alphanumeric character (e.g. ''MyValue'',  or ''my_value'',  or
''12345'', regex used for validation is
''(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])?'')]

Signed-off-by: Mathieu Parent <mathieu.parent@insee.fr>

--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "argo-cd.server.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
-    app.kubernetes.io/version: {{ default (include "argo-cd.defaultTag" .) .Values.server.image.tag | trunc 63 | quote }}
+    {{ include "argo-cd.versionLabel" (default (include "argo-cd.defaultTag" .) .Values.server.image.tag) }}
 spec:
   selector:
     matchLabels:
@@ -24,7 +24,7 @@ spec:
       {{- end }}
       labels:
         {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 8 }}
-        app.kubernetes.io/version: {{ default (include "argo-cd.defaultTag" .) .Values.server.image.tag | trunc 63 | quote }}
+        {{ include "argo-cd.versionLabel" (default (include "argo-cd.defaultTag" .) .Values.server.image.tag) }}
         {{- with (mergeOverwrite (deepCopy .Values.global.podLabels) .Values.server.podLabels) }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
