--- a/charts/argo-workflows/templates/crds/argoproj.io_workflows.yaml
+++ b/charts/argo-workflows/templates/crds/argoproj.io_workflows.yaml
@@ -1,20 +1,37 @@
+{{- if .Values.crds.install }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: cronworkflows.argoproj.io
+  name: workflows.argoproj.io
+  annotations:
+    {{- if .Values.crds.keep }}
+    "helm.sh/resource-policy": keep
+    {{- end }}
+    {{- with .Values.crds.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   group: argoproj.io
   names:
-    kind: CronWorkflow
-    listKind: CronWorkflowList
-    plural: cronworkflows
+    kind: Workflow
+    listKind: WorkflowList
+    plural: workflows
     shortNames:
-    - cwf
-    - cronwf
-    singular: cronworkflow
+    - wf
+    singular: workflow
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: Status of the workflow
+      jsonPath: .status.phase
+      name: Status
+      type: string
+    - description: When the workflow was started
+      format: date-time
+      jsonPath: .status.startedAt
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -38,3 +55,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources: {}
+{{- end }}
