--- a/charts/argo-workflows/templates/crds/argoproj.io_workflowtasksets.yaml
+++ b/charts/argo-workflows/templates/crds/argoproj.io_workflowtasksets.yaml
@@ -1,29 +1,27 @@
+{{- if .Values.crds.install }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: workflows.argoproj.io
+  name: workflowtasksets.argoproj.io
+  annotations:
+    {{- if .Values.crds.keep }}
+    "helm.sh/resource-policy": keep
+    {{- end }}
+    {{- with .Values.crds.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   group: argoproj.io
   names:
-    kind: Workflow
-    listKind: WorkflowList
-    plural: workflows
+    kind: WorkflowTaskSet
+    listKind: WorkflowTaskSetList
+    plural: workflowtasksets
     shortNames:
-    - wf
-    singular: workflow
+    - wfts
+    singular: workflowtaskset
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - description: Status of the workflow
-      jsonPath: .status.phase
-      name: Status
-      type: string
-    - description: When the workflow was started
-      format: date-time
-      jsonPath: .status.startedAt
-      name: Age
-      type: date
-    name: v1alpha1
+  - name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -47,4 +45,6 @@ spec:
         type: object
     served: true
     storage: true
-    subresources: {}
+    subresources:
+      status: {}
+{{- end }}
