--- a/charts/argo-workflows/templates/crds/argoproj.io_workflowtemplates.yaml
+++ b/charts/argo-workflows/templates/crds/argoproj.io_workflowtemplates.yaml
@@ -1,18 +1,25 @@
+{{- if .Values.crds.install }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: clusterworkflowtemplates.argoproj.io
+  name: workflowtemplates.argoproj.io
+  annotations:
+    {{- if .Values.crds.keep }}
+    "helm.sh/resource-policy": keep
+    {{- end }}
+    {{- with .Values.crds.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   group: argoproj.io
   names:
-    kind: ClusterWorkflowTemplate
-    listKind: ClusterWorkflowTemplateList
-    plural: clusterworkflowtemplates
+    kind: WorkflowTemplate
+    listKind: WorkflowTemplateList
+    plural: workflowtemplates
     shortNames:
-    - clusterwftmpl
-    - cwft
-    singular: clusterworkflowtemplate
-  scope: Cluster
+    - wftmpl
+    singular: workflowtemplate
+  scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
@@ -34,3 +41,4 @@ spec:
         type: object
     served: true
     storage: true
+{{- end }}
