--- a/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
@@ -86,10 +86,7 @@ spec:
         {{- with .Values.controller.extraContainers }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-      {{- with .Values.images.pullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      {{- include "argo-workflows.renderImagePullSecrets" (dict "context" . "imagePullSecrets" .Values.images.pullSecrets) | trim | nindent 6 }}
       {{- with .Values.controller.volumes }}
       volumes:
         {{- toYaml . | nindent 6 }}
