--- a/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
@@ -86,7 +86,9 @@ spec:
         {{- with .Values.controller.extraContainers }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-      {{- include "argo-workflows.renderImagePullSecrets" (dict "context" . "imagePullSecrets" .Values.images.pullSecrets) | trim | nindent 6 }}
+      {{- with .Values.images.pullSecrets }}
+        {{- include "argo-workflows.renderImagePullSecrets" (dict "context" $ "imagePullSecrets" .) | nindent 6 }}
+      {{- end }}
       {{- with .Values.controller.volumes }}
       volumes:
         {{- toYaml . | nindent 6 }}
