Add changes annotation. Update example.
Signed-off-by: Ciprian Anton <ciprian.anton@ni.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -6,6 +6,7 @@ images:
   # -- Secrets with credentials to pull images from a private registry
   pullSecrets: []
   # - name: argo-pull-secret
+  # - argo-pull-secret
 
 # -- Create clusterroles that extend existing clusterroles to interact with argo-cd crds
 ## Ref: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#aggregated-clusterroles
