--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -82,6 +82,12 @@ controller:
     path: /metrics
     # -- Port is the port where metrics are emitted
     port: 9090
+    # -- How often custom metrics are cleared from memory
+    metricsTTL: "0"
+    # -- Flag that instructs prometheus to ignore metric emission errors.
+    ignoreErrors: false
+    # --  Flag that use a self-signed cert for TLS
+    secure: false
     # -- Container metrics port name
     portName: metrics
     # -- Service metrics port
@@ -142,6 +148,12 @@ controller:
     path: /telemetry
     # -- telemetry container port
     port: 8081
+    # -- How often custom metrics are cleared from memory
+    metricsTTL: "0"
+    # -- Flag that instructs prometheus to ignore metric emission errors.
+    ignoreErrors: false
+    # --  Flag that use a self-signed cert for TLS
+    secure: false
     # -- telemetry service port
     servicePort: 8081
     # -- telemetry service port name
