--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -83,7 +83,7 @@ controller:
     # -- Port is the port where metrics are emitted
     port: 9090
     # -- How often custom metrics are cleared from memory
-    metricsTTL: "0"
+    metricsTTL: ""
     # -- Flag that instructs prometheus to ignore metric emission errors.
     ignoreErrors: false
     # --  Flag that use a self-signed cert for TLS
@@ -149,7 +149,7 @@ controller:
     # -- telemetry container port
     port: 8081
     # -- How often custom metrics are cleared from memory
-    metricsTTL: "0"
+    metricsTTL: ""
     # -- Flag that instructs prometheus to ignore metric emission errors.
     ignoreErrors: false
     # --  Flag that use a self-signed cert for TLS
