fix(argo-workflows): move crds folder into templates folder
Fixes #1430 #1468

Due to multiple instances where new/changed CRDs for argo-workflows do not
get installed/updated I believe it is time to move the crds folder into
the templates folder like our other helm charts.

I'm aware helm 3 is supposed to handle the crds folder but it seems there
are a few known issues currently [here](https://github.com/hashicorp/terraform-provider-helm/issues/944), [here](https://github.com/helm/helm/issues/11321) and [here](https://github.com/helm/helm/pull/11330) that show that may still
need some work.

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -7,6 +7,15 @@ images:
   pullSecrets: []
   # - name: argo-pull-secret
 
+## Custom resource configuration
+crds:
+  # -- Install and upgrade CRDs
+  install: true
+  # -- Keep CRDs on chart uninstall
+  keep: true
+  # -- Annotations to be added to all CRDs
+  annotations: {}
+
 # -- Create clusterroles that extend existing clusterroles to interact with argo-cd crds
 ## Ref: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#aggregated-clusterroles
 createAggregateRoles: true
